--- a/C&CPP/02-CPP-Basic/10-类.md
+++ b/C&CPP/02-CPP-Basic/10-类.md
@@ -84,31 +84,24 @@ class Screen; // declaration of the Screen class
 
 **不完全类型**：不完全类型（incomplete type）只能以有限方式使用。不能定义该类型的对象。不完全类型只能用于定义指向该类型的指针及引用，或者用于声明（而不是定义）使用该类型作为形参类型或返回类型的函数。
 
-限制：在创建类的对象之前，必须完整地定义该类。必须定义类，而不只是声明类，这样，编译器就会给类的对象预定相应的存储空间。同样地，在使用引用或指针访问类的成员之前，必须已经定义类。
-
-什么时候需要使用向前声明：
+**什么时候需要使用向前声明**：
 
 - 为类的成员使用类声明。
 - 编写相互依赖的类。
 
-#### 为类的成员使用类声明
+**声明类的限制**：在创建类的对象之前，必须完整地定义该类。必须定义类，而不只是声明类，这样，编译器就会给类的对象预定相应的存储空间。同样地，在使用引用或指针访问类的成员之前，必须已经定义类。
 
 - 只有当类定义已经在前面出现过，数据成员才能被指定为该类类型。如果该类型是不完全类型，那么数据成员只能是指向该类类型的指针或引用。
 - 因为只有当类定义体完成后才能定义类，因此类不能具有自身类型的数据成员。然而，只要类名一出现就可以认为该类已声明。因此，类的数据成员可以是指向自身类型的指针或引用。
 
 ```cpp
-  // class LinkScreen;//可选的，因为下面有 class LinkScrenn，只是没有完成定义而已。
-
   class LinkScreen {
     Screen window;
+    //因为到这里时，LinkScreen 还没有完成定义，数据成员只能是指向该类类型的指针或引用。
     LinkScreen *next;
     LinkScreen *prev;
   };
 ```
-
-#### 编写相互依赖的类
-
-- [ ] todo，13.4
 
 ### 类的定义分号结束
 
@@ -303,8 +296,9 @@ private:
 
 注意：**合成的默认构造函数只适用于简单的类**：
 
-- 如果类包含内置或复合类型的成员，则该类不应该依赖于合成的默认构造函数。它应该定义自己的构造函数来初始化这些成员。
-- 有时候编译器不能为某些类合成默认的构造函数，例如如果类中包含一个其他类型的类成员，且这个成员的类型没有默认的构造函数时，那么编译器无法初始化该成员。
+1. 编译器只有在发现不包含任何构造函数的情况下才会替我们生成一个默认的构造函数：如果一个类在某种情况下需要控制对象的初始化，那么该类很可能再所有情况下都需要控制。
+2. 合成的默认构造函数可能执行错误的操作：如果类包含内置或复合类型的成员，则该类不应该依赖于合成的默认构造函数。它应该定义自己的构造函数来初始化这些成员，否则它们的初始化将会是未知的。
+3. 有时候编译器不能为某些类合成默认的构造函数，例如如果类中包含一个其他类型的类成员，且这个成员的类型没有默认的构造函数时，那么编译器无法初始化该成员。
 
 **没有默认构造函数的类意味着什么**？假定有一个类 NoDefault，它没有定义自己的默认构造函数，却有一个接受一个string 实参的构造函数。因为该类定义了一个构造函数，因此编译器将不合成默认构造函数。则:
 
@@ -322,6 +316,17 @@ private:
 Sales_item myobj;//正确，定义了一个Sales_item。
 Sales_item myobj();//错误，声明了一个函数。
 Sales_item myobj = Sales_item();//正确，创建并初始化一个 Sales_item 对象，然后用它来按值初始化 myobj。
+```
+
+#### `= default`（C++11）
+
+在 C++11 中，如果定义的构造函数需要默认行为，可以使用以下方式定义：
+
+```cpp
+class A{
+public:
+  A() = default;
+}
 ```
 
 ### 5.3 初始化列表
@@ -428,7 +433,7 @@ public:
 
 ### 5.7 聚合类
 
-聚合类（aggregate class）允许利用者直接访问其成员，并且具有特殊的初始化形式。聚合类满足以下条件：
+聚合类（aggregate class）允许利用者直接访问其成员，并且具有特殊的初始化形式。满足以下条件的类为聚合类：
 
 - 没有定义构造函数。
 - 全体数据成员均为 public。
@@ -459,7 +464,291 @@ Data val2 = { 1024, "Anna Livia Plurabelle"};
 - 将初始化每个对象的每个成员的负担放在程序员身上，这样的初始化是乏味且易于出错的，因为容易遗忘初始化式或提供不适当的初始化式。
 - 如果增加或删除一个成员，必须找到所有的初始化并正确更新。
 
-### 5.8 拷贝构造函数（todo）
+### 5.8 委托构造函数（C++11）
+
+C++11 新标准扩展了构造函数初始化值的功能，可以定义委托构造函数。即一个构造函数可以委托另一个构造函数进行对象创建。
+
+```cpp
+class Sales_item {
+public:
+    //定义构造函数
+    Sales_item(std::string &book, unsigned cnt, double price): isbn(book), units_sold(cnt), revenue(price) {}
+    //其他构造函数全部委托给上面的构造函数
+    Sales_item():Sales_item("", 0, 0);
+    Sales_item(std::string &book):Sales_item(book, 0, 0);
+};
+```
+
+### 5.9 类成员的内部初始化（C++11）
+
+在 C++98 标准里，只有 static const 声明的整型成员能在类内部初始化，并且初始化值必须是常量表达式。这些限制确保了初始化操作可以在编译时期进行。C++11 的基本思想是，允许非静态（non-static）数据成员在其声明处（在其所属类内部）进行初始化。这样，在运行过程中，需要初始值时构造函数可以使用这个初始值。
+
+```cpp
+ class A {
+    public:
+        int a = 7;
+    };
+```
+
+具体参考[Non-static data member initializers](http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2008/n2628.html)
+
+### 5.10 字面值常量类（C++11）
+
+除了算术类型、指针、引用外，某些对象也可以是字面值类型，字面值类型可能含有函数 constexpr 成员函数，它们是隐式 const 的。
+
+数据成员都是字面值的聚合类是字面值常量类，如果一个类不是聚合类，但是符合以下条件，则它也是字面值常量类：
+
+- 数据成员都必须是字面值类型。
+- 类必须至少含有一个 constexpr 构造函数。
+- 如果一个数据成员含有类初始值，则内置类型成员的初始值也必须是一条常量表达式；或者如果成员属于某一个类类型，则初始值必须使用成员自己的 constexpr 构造函数。
+- 类必须使用析构函数的默认定义，该成员必须负责销毁类的对象。
+
+一个普通的类不能函数有 const 构造函数，但是字面值常量类必须提供至少一个 constexpr 构造函数，constexpr 构造函数可以声明为 default。或者要么constexpr 构造函数拥有唯一的返回语句，要么 constexpr 构造函数是空的。
+
+```cpp
+class Debug {
+public:
+    constexpr Debug(bool b = true): hw(b), io(b), other(b) { }
+
+    constexpr Debug(bool h, bool i, bool o): hw(h), io(i), other(o) { }
+
+    constexpr bool any() { return hw || io || other; }
+
+    constexpr bool hardware() { return hw || io; }
+
+    constexpr bool app() { return other; }
+
+    void set_io(bool b) { io = b; }
+    void set_hw(bool b) { hw = b; }
+    void set_other(bool b) { hw = b; }
+
+private:
+    bool hw;    // 硬件错误，而非IO错误
+    bool io;    // IO 错误
+    bool other; // 其他错误
+};
+```
+
+constexpr 构造函数必须初始化所有数据成员，初始值或者使用 constexpr 构造函数，或者是一条常量表达式。
+
+constexpr 构造函数用于生成 constexpr 对象以及 constexpr 函数的参数或返回类型：
+
+```cpp
+constexpr Debug io_sub(false, true, false);//调试io
+if(io_sub.any()){//等价于 if(true)
+  cerr << "print appropriate error messages" << endl;
+}
+
+constexpr Debug prod(false);//无调试
+if(prod.any()){//等价于 if(false)
+  cerr << "print an error messages" << endl;
+}
+```
+
+---
+## 6 友元
+
+### 友元机制
+
+友元机制：允许一个类将对其非公有成员的访问权授予指定的函数或类。
+
+友元的声明：
+
+- 友元的声明以关键字 friend 开始。它只能出现在类定义的内部，可以出现在类中的任何地方。
+- 友元不是授予友元关系的那个类的成员，所以它们不受声明出现部分的访问控制影响。
+- 推荐将友元声明成组地放在类定义的开始或结尾。
+
+哪些元素可以声明为友元：
+
+- 友元可以是一个函数，该函数被称为友元函数
+- 友元也可以是一个类，该类被称为友元类，在这种情况下，整个类及其所有成员都是友元
+- 友元也可以只是其他类的成员函数
+
+友元的访问权限：
+
+- 类的友元函数是定义在类外部，但有权访问类的所有私有（private）成员和保护（protected）成员。友元声明可以出现在类中的任何地方，
+- 尽管友元函数的原型有在类的定义中出现过，**但是友元函数并不是成员函数**。友元不受它所在区域访问控制级别的约束。
+
+示例：
+
+```cpp
+class Box {
+private:
+    double width;
+public:
+    void setWidth(double wid);
+public://友元放在一起
+    friend void printWidth(Box box);
+    friend class Friend;
+};
+
+// 成员函数定义
+void Box::setWidth(double wid) {
+    width = wid;
+}
+
+// 请注意：printWidth() 不是任何类的成员函数
+void printWidth(Box box) {
+    /* 因为 printWidth() 是 Box 的友元，它可以直接访问该类的任何成员 */
+    std::cout << "Width of box : " << box.width << std::endl;
+}
+
+//这是一个友元类
+class Friend {
+public:
+    double getBoxWidth(Box box) {
+        return box.width;
+    }
+};
+```
+
+访问友元函数：
+
+- 友元的声明仅仅指定了访问的权限，而非一个统一意义上的函数声明（友元的声明，不是真正的声明），如果我们希望类的用户能够调用某个友元函数，那么我们就必须再友元声明之外再专门对函数进行一次声明。
+- 为了使友元对类的用户可见，我们通常把友元的声明与类本身防止在同一个头文件中，这里的声明是指除了类内部的友元声明之外的独立声明。
+
+### 使其他类的成员函数成为友元
+
+```cpp
+//先声明Box。
+class Box;
+
+class FriendMethod {
+public:
+    //这里只要声明，不要定义，否则无法访问Box的成员。
+    void printBoxInfo(Box &box);
+};
+
+//Box定义
+class Box {
+  ...
+public:
+  friend void FriendMethod::printBoxInfo(Box &);
+}
+
+//之后再定义友元成员函数
+void FriendMethod::printBoxInfo(Box &box) {
+    std::cout << "box: " << box.width << std::endl;
+}
+```
+
+### 友元声明与作用域
+
+1. 类和非常有函数的声明不是必须出现在它们的友元声明之前（可以理解为声明一个友元函数时，不依赖于那个函数是否已经声明过）。当一个名字第一次出现在一个友元声明中，我们隐式地假设改名字在当前作用域是可见的。
+2. 友元本身（的定义）不一定真的在当前作用域中（比如声明的友元可能在其他文件中定义）。
+3. 就算在类的内部定义了该友元函数，我们也必须在类的外部提供相应函数的声明，从而使得函数可见，即使我们用声明友元的类的成员函数去调用那个友元函数，它必须是被声明过的。
+
+```cpp
+//演示友元的作用域
+class FriendScope{
+public:
+    //可以在类中直接定义友元，但是如果想要调用该函数，还需要用普通方式再声明一次
+    friend void f(){}
+    FriendScope(){
+        //错误的调用，f 没有被声明，导致无法编译。
+        f();
+    }
+
+    void g();
+    void h();
+};
+
+void FriendScope::g(){
+    //错误的调用，f 没有被声明，导致无法编译。
+    f();
+}
+
+void f();
+
+void FriendScope::h(){
+    f();//可以调用，因为 f 已经声明在作用域中了。
+}
+```
+
+---
+## 8 类的静态成员
+
+通常，非 `static` 数据成员存在于类类型的每个对象中。不像普通的数据成员，`static` 数据成员独立于该类的任意对象而存在；每个 `static` 数据成员是与类关联的对象，并不与该类的对象相关联。
+
+static 成员的特点：
+
+- `static` 成员的名字是在类的作用域中，因此可以避免与其他类的成员或全局对象名字冲突。
+- 可以实施封装。`static` 成员可以是私有成员，而全局对象不可以。
+- `static` 成员是与特定类关联的。这种可见性可清晰地显示程序员的意图。
+
+```cpp
+class Account {
+  public:
+    void applyint() { amount += amount * interestRate; }
+    static double rate() { return interestRate; }
+    static void rate(double); // sets a new rate
+  private:
+    std::string owner;
+    double amount;
+    static double interestRate;
+    static double initRate();
+};
+```
+
+### 静态成员变量
+
+我们可以使用 `static` 关键字来把类成员定义为静态的。当我们声明类的成员为静态时，这意味着无论创建多少个类的对象，静态成员都只有一个副本。
+
+可以通过作用 **范围解析运算符(域操作符)** 从类直接调用 static 成员，或者通过对象、引用或指向该类类型对象的指针间接调用。
+
+```cpp
+void useAccount(){
+    Account ac1;
+    Account *ac2 = &ac1;
+    double rate;
+    rate = ac1.rate();
+    rate = ac2->rate();
+    rate = Account::rate();   // 直接从类使用范围解析运算符
+}
+```
+
+### 静态成员函数
+
+如果把函数成员声明为静态的，就可以把函数与类的任何特定对象独立开来。静态成员函数即使在类对象不存在的情况下也能被调用，静态函数只要使用类名加**范围解析运算符**`::`就可以访问。
+
+static 函数的一些限制：
+
+- static 函数没有 this 指针。static 成员是类的组成部分但不是任何对象的组成部分，因此，static 成员函数没有 this 指针。通过使用非 static 成员显式或隐式地引用 this 是一个编译时错误。
+- static 成员函数不能被声明为 const 。因为 static 成员不是任何对象的组成部分，所以static 成员函数不能被声明为 const。毕竟，将成员函数声明为 const 就是承诺不会修改该函数所属的对象。
+- static 成员函数也不能被声明为虚函数。
+
+### 直接静态成员初始化
+
+- `static` 数据成员可以声明为任意类型，可以是常量、引用、数组、类类型等。
+- `static` 数据成员必须在类定义体的外部定义（正好一次）。不像普通数据成员。
+- **static 成员不是通过类构造函数进行初始化，而是应该在定义时进行初始化**。
+
+```cpp
+class Box {
+public:
+    static int objectCount = 4;//不合法
+};
+
+//可以在类的外部通过使用范围解析运算符 :: 来重新声明静态变量从而对它进行初始化
+int Box::objectCount = 0;
+```
+
+### 特殊的整型 const static 成员
+
+一般而言，类的 `static` 成员，像普通数据成员一样，不能在类的定义体中初始化。相反，static 数据成员通常在定义时才初始化。这个规则的一个例外是，只要初始化式是一个**常量表达式**，整型`const static`数据成员就可以在类的定义体中进行初始化：
+
+```cpp
+class Account {
+public:
+  static double rate() { return interestRate; }
+  static void rate(double);  // sets a new rate
+private:
+  static const int period = 30;
+  double daily_tbl[period];
+};
+```
+
+### 9 拷贝构造函数（todo）
 
 除了定义类的对象如何被初始化，类还要控制拷贝、复制和销毁对象时发生的行为，对象发生拷贝的场景：
 
@@ -528,83 +817,8 @@ classname (const classname &obj) {
 
 有些类需要完全禁止复制。例如，`iostream` 类就不允许复制。如果想要禁止复制，似乎可以省略复制构造函数，然而，如果不定义复制构造函数，编译器将合成一个。为了防止复制，类必须显式声明其复制构造函数为private。如果想要连友元和成员中的复制也禁止，就可以声明一个private的复制构造函数但不对其定义。
 
-### 5.8 `= default`（C++11）
-
-在 C++11 中，如果定义的构造函数需要默认行为，可以使用以下方式定义：
-
-```cpp
-class A{
-public:
-  A() = default;
-}
-```
-
-### 5.9 委托构造函数（C++11）
-
-C++11 新标准扩展了构造函数初始化值的功能，可以定义委托构造函数。即一个构造函数可以委托另一个构造函数进行对象创建。
-
-```cpp
-class Sales_item {
-public:
-    //定义构造函数
-    Sales_item(std::string &book, unsigned cnt, double price): isbn(book), units_sold(cnt), revenue(price) {}
-    //其他构造函数全部委托给上面的构造函数
-    Sales_item():Sales_item("", 0, 0);
-    Sales_item(std::string &book):Sales_item(book, 0, 0);
-};
-```
-
-### 5.10 类成员的内部初始化（C++11）
-
-在C++98标准里，只有 static const 声明的整型成员能在类内部初始化，并且初始化值必须是常量表达式。这些限制确保了初始化操作可以在编译时期进行。C++11 的基本思想是，允许非静态（non-static）数据成员在其声明处（在其所属类内部）进行初始化。这样，在运行过程中，需要初始值时构造函数可以使用这个初始值。
-
-```cpp
- class A {
-    public:
-        int a = 7;
-    };
-```
-
-### 5.11 字面值常量类（C++11）
-
-除了算术类型、指针、引用外，某些对象也可以是字面值类型，字面值类型可能函数 constexpr 成员函数，它们是隐式 const 的。
-
-数据成员都是字面值的聚合类是字面值常量类，如果一个类不是聚合类，但是如何以下条件，则它也是字面值常量类：
-
-- 数据成员都必须是字面值类型
-- 类必须至少含有一个constexpr构造函数
-- 如果一个数据成员含有类初始值，则内置类型成员的初始值也必须是一条常量表达式；或者如果成员属于某一个类类型，则初始值必须使用成员自己的constexpr构造函数
-- 类必须使用析构函数的默认定义，该成员必须负责销毁类的对象
-
-一个普通的类不能函数有const构造函数，但是字面值常量类必须提供至少一个constexpr构造函数,constexpr构造函数可以声明为default。
-或者要么constexpr构造函数拥有唯一的返回语句，要么constexpr构造函数是空的。
-
-```cpp
-class Debug {
-public:
-    constexpr Debug(bool b = true): hw(b), io(b), other(b) { }
-
-    constexpr Debug(bool h, bool i, bool o): hw(h), io(i), other(o) { }
-
-    constexpr bool any() { return hw || io || other; }
-
-    constexpr bool hardware() { return hw || io; }
-
-    constexpr bool app() { return other; }
-
-    void set_io(bool b) { io = b; }
-    void set_hw(bool b) { hw = b; }
-    void set_other(bool b) { hw = b; }
-
-private:
-    bool hw;    // hardware errors other than IO errors
-    bool io;    // IO errors
-    bool other; // other errors
-};
-```
-
 ---
-## 6 析构函数
+## 10 析构函数
 
 析构函数是构造函数的互补：当对象超出作用域或动态分配的对象被删除时，将自动应用析构函数。析构函数可用于释放对象时构造或在对象的生命期中所获取的资源。不管类是否定义了自己的析构函数，编译器都自动执行类中非 `static` 数据成员的析构函数。
 
@@ -621,143 +835,7 @@ private:
 **如果类需要析构函数，则它也需要赋值操作符和复制构造函数，这是一个有用的经验法则。这个规则常称为三法则，指的是如果需要析构函数，则需要所有这三个复制控制成员。**
 
 ---
-## 7 友元
-
-在某些情况下，允许特定的非成员函数访问一个类的私有成员，同时仍然阻止一般的访问，这是很方便做到的。例如，被重载的操作符，如输入或输出操作符，经常需要访问类的私有数据成员。这些操作符不可能为类的成员。然而尽管不是类的成员，它们仍是类的“接口的组成部分”。
-
-如果要声明函数为一个类的友元，需要在类定义中该函数原型前使用关键字 `friend`修饰符
-
-类的友元函数是定义在类外部，但有权访问类的所有私有（private）成员和保护（protected）成员。友元声明可以出现在类中的任何地方，尽管友元函数的原型有在类的定义中出现过，**但是友元函数并不是成员函数**。
-
-- 友元可以是一个函数，该函数被称为友元函数
-- 友元也可以是一个类，该类被称为友元类，在这种情况下，整个类及其所有成员都是友元
-- 友元也可以只是其他类的成员函数
-
->通常应该将友元声明成组地放在类定义的开始或结尾。
-
-### 使其他类的成员函数成为友元
-
-```cpp
-class Screen {
-  // Window_Mgr必须在Screen之前定义
-  //将成员函数声明为友元时，函数名必须用该函数所属的类名字加以限定
-  friend Window_Mgr& Window_Mgr::relocate(Window_Mgr::index, Window_Mgr::index,Screen&); 
-};
-
-```
-
-### 友元声明与作用域
-
-```cpp
-class Screen { 
-  friend Window_Mgr& Window_Mgr::relocate(Window_Mgr::index, Window_Mgr::index,  Screen&); 
-};
-```
-
-为了正确地构造类，需要注意友元声明与友元定义之间的互相依赖。在上面的例子中：类 Window_Mgr 必须先定义。否则，Screen 类就不能将一个 Window_Mgr 函数指定为友元。然而， 只有在定义类 Screen 之后，才能定义 relocate 函数 ——毕竟，它被设为友元是为了访问类 Screen 的成员。更一般地讲， 必须先定义包含成员函数的类，才能将成员函数设为友元。另一方面，不必预先声明类和非成员函数来将它们设为友元。友元声明将已命名的类或非成员函数引入到外围作用域中。此外，友元函数可以在类的内部定义，该函数的作用域扩展到包围该类定义的作用域。
-
-### 重载函数和友元
-
-类必须将 **重载函数集** 中的每一个希望设为友元的函数都声明为友元。
-
-```cpp
-//两个重载的storeOn方法
-extern std::ostream& storeOn(std::ostream &, Screen &); 
-extern BitMap& storeOn(BitMap &, Screen &); 
-
-class Screen { 
-  //类 Screen 将接受一个 ostream& 的 storeOn 版本设为自己的友元。接受一个 BitMap& 的版本对 Screen 没有特殊访问权。
-  friend std::ostream& storeOn(std::ostream &, Screen &); 
-  // ... 
-};
-```
-
----
-## 8 类的静态成员
-
-通常，非 `static` 数据成员存在于类类型的每个对象中。不像普通的数据成员，`static` 数据成员独立于该类的任意对象而存在；每个 `static` 数据成员是与类关联的对象，并不与该类的对象相关联。
-
-static 成员的特点：
-
-- `static` 成员的名字是在类的作用域中，因此可以避免与其他类的成员或全局对象名字冲突。
-- 可以实施封装。`static` 成员可以是私有成员，而全局对象不可以。
-- `static` 成员是与特定类关联的。这种可见性可清晰地显示程序员的意图。
-
-```cpp
-class Account { 
-  public: 
-    void applyint() { amount += amount * interestRate; } 
-    static double rate() { return interestRate; } 
-    static void rate(double); // sets a new rate 
-  private: 
-    std::string owner; 
-    double amount; 
-    static double interestRate; 
-    static double initRate(); 
-};
-```
-
-### 静态成员变量
-
-我们可以使用 `static` 关键字来把类成员定义为静态的。当我们声明类的成员为静态时，这意味着无论创建多少个类的对象，静态成员都只有一个副本。
-
-可以通过作用 **范围解析运算符(域操作符)** 从类直接调用 static 成员，或者通过对象、引用或指向该类类型对象的指针间接调用。
-
-```cpp
-void useAccount(){
-    Account ac1; 
-    Account *ac2 = &ac1; 
-    double rate; 
-    rate = ac1.rate();      
-    rate = ac2->rate();
-    rate = Account::rate();   // 直接从类使用范围解析运算符
-}
-```
-
-### 静态成员函数
-
-如果把函数成员声明为静态的，就可以把函数与类的任何特定对象独立开来。静态成员函数即使在类对象不存在的情况下也能被调用，静态函数只要使用类名加**范围解析运算符**` :: `就可以访问。
-
-static 函数的一些限制：
-
-- static 函数没有 this 指针。static 成员是类的组成部分但不是任何对象的组成部分，因此，static 成员函数没有 this 指针。通过使用非 static 成员显式或隐式地引用 this 是一个编译时错误。
-- static 成员函数不能被声明为 const 。因为 static 成员不是任何对象的组成部分，所以static 成员函数不能被声明为 const。毕竟，将成员函数声明为 const 就是承诺不会修改该函数所属的对象。
-- static 成员函数也不能被声明为虚函数。
-
-### 直接静态成员初始化
-
-- `static` 数据成员可以声明为任意类型，可以是常量、引用、数组、类类型等。
-- `static` 数据成员必须在类定义体的外部定义（正好一次）。不像普通数据成员，
-- **static 成员不是通过类构造函数进行初始化，而是应该在定义时进行初始化。**
-
-    
-```cpp
-class Box {
-public:
-    static int objectCount = 4;//不合法
-};
-
-//可以在类的外部通过使用范围解析运算符 :: 来重新声明静态变量从而对它进行初始化
-int Box::objectCount = 0;
-```
-
-### 特殊的整型 const static 成员
-
-一般而言，类的 `static` 成员，像普通数据成员一样，不能在类的定义体中初始化。相反，static 数据成员通常在定义时才初始化。这个规则的一个例外是，只要初始化式是一个**常量表达式**，整型`const static`数据成员就可以在类的定义体中进行初始化：
-
-```cpp
-class Account { 
-public: 
-  static double rate() { return interestRate; } 
-  static void rate(double);  // sets a new rate 
-private: 
-  static const int period = 30; 
-  double daily_tbl[period];
-};
-```
-
----
-## 9 指针成员
+## 11 指针成员
 
 设计具有指针成员的类时，类设计者必须首先需要决定的是该指针应提供什么行为。将一个指针复制到另一个指针时，两个指针指向同一对象。当两个指针指向同一对象时，可能使用任一指针改变基础对象。类似地，很可能一个指针删除了一对象时，另一指针的用户还认为基础对象仍然存在。
 
