--- a/C&CPP/02-CPP-Basic/10-类.md
+++ b/C&CPP/02-CPP-Basic/10-类.md
@@ -748,9 +748,19 @@ private:
 };
 ```
 
-### 9 拷贝构造函数（todo）
+### 9 复制控制
 
-除了定义类的对象如何被初始化，类还要控制拷贝、复制和销毁对象时发生的行为，对象发生拷贝的场景：
+除了定义类的对象如何被初始化，类型还能通过下面技术来控制复制、赋值或撤销该类型的对象时会发生的行为：
+
+- 复制构造函数：一种特殊构造函数，具有单个形参，该形参（常用 const 修饰）是对该类类型的引用。当定义一个新对象并用一个同类型的对象对它进行初始化时，将显式使用复制构造函数。当将该类型的对象传递给函数或函数返回该类型的对象时，将隐式使用复制构造函数。
+- 析构函数：当对象超出作用域或动态分配的对象被删除时，将自动应用析构函数。析构函数可用于释放对象时构造或在对象的生命期中所获取的资源。不管类是否定义了自己的析构函数，编译器都自动执行类中非 static 数据成员的析构函数。
+- 赋值操作符：赋值操作符可以通过指定不同类型的右操作数而重载。
+
+复制构造函数、赋值操作符和析构函数总称为**复制控制**。编译器自动实现这些操作，但类也可以定义自己的版本。
+
+### 9.1 复制构造函数
+
+对象发生拷贝的场景：
 
 - 使用了赋值运算符。
 - 调用函数时使用值传参。
@@ -817,8 +827,7 @@ classname (const classname &obj) {
 
 有些类需要完全禁止复制。例如，`iostream` 类就不允许复制。如果想要禁止复制，似乎可以省略复制构造函数，然而，如果不定义复制构造函数，编译器将合成一个。为了防止复制，类必须显式声明其复制构造函数为private。如果想要连友元和成员中的复制也禁止，就可以声明一个private的复制构造函数但不对其定义。
 
----
-## 10 析构函数
+### 9.2 析构函数
 
 析构函数是构造函数的互补：当对象超出作用域或动态分配的对象被删除时，将自动应用析构函数。析构函数可用于释放对象时构造或在对象的生命期中所获取的资源。不管类是否定义了自己的析构函数，编译器都自动执行类中非 `static` 数据成员的析构函数。
 
@@ -835,7 +844,7 @@ classname (const classname &obj) {
 **如果类需要析构函数，则它也需要赋值操作符和复制构造函数，这是一个有用的经验法则。这个规则常称为三法则，指的是如果需要析构函数，则需要所有这三个复制控制成员。**
 
 ---
-## 11 指针成员
+## 10 指针成员
 
 设计具有指针成员的类时，类设计者必须首先需要决定的是该指针应提供什么行为。将一个指针复制到另一个指针时，两个指针指向同一对象。当两个指针指向同一对象时，可能使用任一指针改变基础对象。类似地，很可能一个指针删除了一对象时，另一指针的用户还认为基础对象仍然存在。
 
