--- a/C&CPP/02-CPP-Basic/10-类.md
+++ b/C&CPP/02-CPP-Basic/10-类.md
@@ -795,21 +795,56 @@ A y = x;　　//拷贝初始化，调用拷贝构造函数
 与默认构造函数一样，复制构造函数可由编译器隐式调用。复制构造函数可用于，拷贝构造函数通常用于：
 
 - 根据另一个同类型的对象显式或隐式初始化一个对象。
-- 复制一个对象,将它作为实参传给一个函数。
+- 复制一个对象，将它作为实参传给一个函数。
 - 从函数返回时复制一个对象。
 - 初始化顺序容器中的元素。
 - 根据元素初始化式列表初始化数组元素。
 
+参考下面代码：
+
+```cpp
+string null_book = "9-999-99999-9"; //复制初始化，首先根据 "9-999-99999-9" 创建临时的 string，然后使用复制构造函数
+string dots(10, '.');               //直接初始化
+string empty_copy = string();       //复制初始化，使用临时的空字符串来初始化 empty_copy
+string empty_direct;                //直接初始化
+
+iostream file1("filename");   // 直接初始化
+ifstream file2 = "filename";  // 错误，复制构造函数是私有的
+Sales_item item = string("9-999-99999-9");  //当 Sales_item(const string&) 构造函数不是 explicit 时正确
+
+//返回一个string对象的函数，将使用复制构造函数构造返回的对象
+string make_plural(size_t, const string&, const string&);
+
+//编译器首先使用 string 默认构造函数创建一个临时值来初始化 svec，然后使用复制构造函数将临时值复制到 svec 的每个元素。
+vector<string> svec(5);
+
+//如果没有为类类型数组提供元素初始化式，则将用默认构造函数初始化每个元素。
+//如果使用常规的花括号括住的数组初始化列表来提供显式元素初始化式，则使用复制初始化来初始化每个元素。
+
+Saales_item primer_eds[] = {
+      string("0-201-16487-6"),//这里根据 string 创建 Sales_item，然后使用复制构造函数初始化数组中的元素。
+      string("0-201-54848-8"),
+      string("0-201-82470-1"),
+      Sales_item()
+};
+```
+
+#### 合成复制构造函数
+
+- 如果我们没有定义复制构造函数，编译器就会为我们合成一个。与合成的默认构造函数不同，即使我们定义了其他构造函数，也会合成复制构造函数。
+- 合成复制构造函数的行为是，执行逐个成员（非static成员）初始化，将新对象初始化为原对象的副本。每个成员的类型决定了复制该成员的含义。
+  - 对于内置类型成员的值，合成复制构造函数直接复制。
+  - 对于类类型成员，则使用该类的复制构造函数进行复制。
+  - 对于数组成员，虽然一般不能复制数组，但如果一个类具有数组成员，则合成复制构造函数将复制数组。复制数组时合成复制构造函数将复制数组的每一个元素。
+
 #### 定义复制构造函数
 
-什么时候定义拷贝构造函数：
-
-- 如果在类中没有定义拷贝构造函数，编译器会自行定义一个。
-- 如果类带有指针变量，并有动态内存分配，则它必须有一个显式的拷贝构造函数。
+如果在类中没有定义拷贝构造函数，编译器会自行定义一个，如果类带有指针变量，并有动态内存分配，则它必须有一个显式的拷贝构造函数。
 
 拷贝构造函数的最常见形式如下：
 
 ```cpp
+//复制构造函数就是接受单个类类型引用形参（通常用 const 修饰）的构造函数：
 classname (const classname &obj) {
    // 构造函数的主体
 }
@@ -819,13 +854,9 @@ classname (const classname &obj) {
 
 **定义复制构造函数最困难的部分在于认识到该类需要复制构造函数**。
 
-#### 合成复制构造函数
-
-如果我们没有定义复制构造函数，编译器就会为我们合成一个。与合成的默认构造函数不同，即使我们定义了其他构造函数，也会合成复制构造函数。合成复制构造函数的行为是，执行逐个成员（非static成员）初始化，将新对象初始化为原对象的副本。每个成员的类型决定了复制该成员的含义。合成复制构造函数直接复制内置类型成员的值，类类型成员使用该类的复制构造函数进行复制。数组成员的复制是个例外。虽然一般不能复制数组，但如果一个类具有数组成员，则合成复制构造函数将复制数组。复制数组时合成复制构造函数将复制数组的每一个元素。
-
 #### 禁止复制
 
-有些类需要完全禁止复制。例如，`iostream` 类就不允许复制。如果想要禁止复制，似乎可以省略复制构造函数，然而，如果不定义复制构造函数，编译器将合成一个。为了防止复制，类必须显式声明其复制构造函数为private。如果想要连友元和成员中的复制也禁止，就可以声明一个private的复制构造函数但不对其定义。
+有些类需要完全禁止复制。例如 `iostream` 类就不允许复制。如果想要禁止复制，类必须显式声明其复制构造函数为 private。如果想要连友元和成员中的复制也禁止，就可以声明一个 private 的复制构造函数但不对其定义。
 
 ### 9.2 析构函数
 
