--- a/C&CPP/02-CPP-Basic/10-类.md
+++ b/C&CPP/02-CPP-Basic/10-类.md
@@ -821,7 +821,7 @@ vector<string> svec(5);
 //如果没有为类类型数组提供元素初始化式，则将用默认构造函数初始化每个元素。
 //如果使用常规的花括号括住的数组初始化列表来提供显式元素初始化式，则使用复制初始化来初始化每个元素。
 
-Saales_item primer_eds[] = {
+Sales_item primer_eds[] = {
       string("0-201-16487-6"),//这里根据 string 创建 Sales_item，然后使用复制构造函数初始化数组中的元素。
       string("0-201-54848-8"),
       string("0-201-82470-1"),
@@ -858,31 +858,82 @@ classname (const classname &obj) {
 
 有些类需要完全禁止复制。例如 `iostream` 类就不允许复制。如果想要禁止复制，类必须显式声明其复制构造函数为 private。如果想要连友元和成员中的复制也禁止，就可以声明一个 private 的复制构造函数但不对其定义。
 
-### 9.2 析构函数
+### 9.2 赋值操作符
+
+赋值操作符用于定义对类型进行复制时将会发生的动作，与复制构造函数一样，如果类没有定义自己的赋值操作符，则编译器会合成一个。当然我们也可以自定义赋值操作符，参考下面代码:
+
+```cpp
+class Book {
+private:
+    float price;
+    std::string serialNo;
+
+public:
+    //定义构造函数
+    Book(float _price, std::string &_serialNo) : price(_price), serialNo(_serialNo) {
+        std::cout << "Book construct running" << std::endl;
+    }
+
+    //定义复制函构造数
+    Book(const Book &book) : price(book.price), serialNo(book.serialNo) {
+        std::cout << "Book copy construct running" << std::endl;
+    }
+
+    //定义拷贝操作符
+    Book &operator=(const Book &book) {
+        this->price = book.price;
+        this->serialNo = book.serialNo;
+        std::cout << "Book operator= running" << std::endl;
+        return *this;
+    }
+
+};
+
+int main() {
+
+  string serialNo("a");
+
+  //将调用构造函数
+  Book book1(12, serialNo);
+  //将调用复制构造函数
+  Book book2 = book1;
+  //将调用拷贝操作符
+  book2 = Book(123, serialNo);
+
+  return EXIT_SUCCESS;
+}
+```
+
+- 赋值操作符必须是定义自己的类的成员。因为赋值必须是类的成员，所以 this 绑定到指向左操作数的指针。
+- 赋值操作符接受单个形参，且该形参是同一类类型的对象。右操作数一般作为 const 引用传递。
+- 操作符返回 `*this`，它是对左操作数对象的引用。
+- 合成赋值操作符与合成复制构造函数的操作类似。它会执行逐个成员赋值：右操作数对象的每个成员赋值给左操作数对象的对应成员。除数组之外，对于数组，给每个数组元素赋值。
+- 一般，如果类需要复制构造函数，则也需要赋值操作符。
+
+### 9.3 析构函数
 
 析构函数是构造函数的互补：当对象超出作用域或动态分配的对象被删除时，将自动应用析构函数。析构函数可用于释放对象时构造或在对象的生命期中所获取的资源。不管类是否定义了自己的析构函数，编译器都自动执行类中非 `static` 数据成员的析构函数。
 
 析构函数的名称与类的名称是完全相同的，只是在前面加了个波浪号`~`作为前缀，它不会返回任何值，也不能带有任何参数。析构函数有助于在跳出程序（比如关闭文件、释放内存等）前释放资源。
 
 - 撤销类对象时会自动调用析构函数。撤销一个容器(不管是标准库容器还是内置数组)时，也会运行容器中的类类型元素的析构函数。
-- 动态分配的对象只有在指向该对象的指针被删除时才撤销。如果没有删除指向动态对象的指针，
-则不会运行该对象的析构函数，对象就一直存在，从而导致内存泄漏，而且，对象内部使用的任何资源也不会释放。
-- 容器中的元素总是按逆序撤销：首先撤销下标为 size() - 1 的元素，然后是下标为 size() - 2 的元素…直到最后撤销下标为0 的元素。
+- 动态分配的对象只有在指向该对象的指针被删除时才撤销。如果没有删除指向动态对象的指针，则不会运行该对象的析构函数，对象就一直存在，从而导致内存泄漏，而且，对象内部使用的任何资源也不会释放。
+- 容器中的元素总是按逆序撤销：首先撤销下标为 `size() - 1` 的元素，然后是下标为 `size() - 2` 的元素…直到最后撤销下标为 0 的元素。
 - 合成析构函数按对象创建时的逆序撤销每个非 static 成员，因此，它按成员在类中声明次序的逆序撤销成员。对于类类型的每个成员，合成析构函数调用该成员的析构函数来撤销对象。
 
 许多类不需要显式析构函数，尤其是具有构造函数的类不一定需要定义自己的析构函数。仅在有些工作需要析构函数完成时，才需要析构函数。析构函数通常用于释放在构造函数或在对象生命期内获取的资源。
 
-**如果类需要析构函数，则它也需要赋值操作符和复制构造函数，这是一个有用的经验法则。这个规则常称为三法则，指的是如果需要析构函数，则需要所有这三个复制控制成员。**
+**如果类需要析构函数，则它也需要赋值操作符和复制构造函数，这是一个有用的经验法则。这个规则常称为三法则，指的是如果需要析构函数，则需要所有这三个复制控制成员**。
 
 ---
-## 10 指针成员
+## 10 管理指针成员
 
 设计具有指针成员的类时，类设计者必须首先需要决定的是该指针应提供什么行为。将一个指针复制到另一个指针时，两个指针指向同一对象。当两个指针指向同一对象时，可能使用任一指针改变基础对象。类似地，很可能一个指针删除了一对象时，另一指针的用户还认为基础对象仍然存在。
 
 大多数 C++ 类采用以下三种方法之一管理指针成员：
 
 - 指针成员采取常规指针型行为。这样的类具有指针的所有缺陷但无需特殊的复制控制，可能会出现悬停指针。
-- 类可以实现所谓的“智能指针”行为。指针所指向的对象是共享的，但类能够防止悬垂指针。
+- 类可以实现所谓的“智能指针”行为，指针所指向的对象是共享的，但类能够防止悬垂指针。
 - 类采取值型行为。指针所指向的对象是唯一的，由每个类对象独立管理。
 
 定义智能指针的通用技术是采用一个使用计数。智能指针类将一个计数器与类指向的对象相关联。使用计数跟踪该类有多少个对象共享同一指针。使用计数为 0 时，删除对象。使用计数有时也称为引用计数。
