--- a/C&CPP/02-CPP-Basic/11-操作符重载与类型转换.md
+++ b/C&CPP/02-CPP-Basic/11-操作符重载与类型转换.md
@@ -1,44 +1,42 @@
-# 运算符重载
+# 运算符重载与类型转换
+
+## 1 运算符重载
 
 C++ 中可以重定义或重载大部分内置的运算符。重载的运算符是带有特殊名称的函数，函数名是由关键字 operator 和其后要重载的运算符符号构成的。与其他函数一样，**重载运算符有一个返回类型和一个参数列表**。
 
 声明加法运算符用于把两个 Box 对象相加，返回最终的 Box 对象。
 
 ```cpp
- Box operator+(const Box&);//这种方式定义在类成员位置
- Box operator+(const Box&, const Box&);//这种方式可以定义在类外部
+Box operator+(const Box&);//这种方式定义在类成员位置
+Box operator+(const Box&, const Box&);//这种方式可以定义在类外部
 ```
 
----
-## 1 可以重载的操作符
+### 1.1 可以重载的操作符
 
-- `+        -        *        /        %        ^`
-- `&        |        ~        !        ,        =`
-- `<        >        <=        >=        ++        --`
-- `<<        >>        ==        !=        &&    ||`
-- `+=        -=        /=        %=    ^=        &=`
-- `|=        *=        <<=    >>=     []        ()`
-- `->        ->*        new        new[]        delete    delete []`
+操作符 | 操作符 | 操作符 | 操作符 | 操作符 | 操作符
+------- | ------- | ------- | ------- | ------- | -------
+`+` | `-` | `*` | `/` | `%` | `^`
+`&` | `|` | `~` | `!` | `,` | `=`
+`<` | `>` | `<=` | `>=` | `++` | `--`
+`<<` | `>>` | `==` | `!=` | `&&` | `||`
+`+=` | `-=` | `/=` | `%=` | `^=` | `&=` |
+`|=` | `*=` | `<<=` | `>>=` | `[]` | `()`
+`->` | `->*` | `new` | `new []` | `delete` | `delete []`
 
----
-## 2 不可以重载的运算符
+### 1.2 不可以重载的运算符
 
 - `.`：成员访问运算符
-- `.*, ->*`：成员指针访问运算符
+- `.*`：成员指针访问运算符
 - `::`：域运算符
-- `sizeof`：长度运算符
 - `?:`：条件运算符
-- `#`： 预处理符号
 
----
-## 3 组合操作符
+### 1.3 组合操作符
 
 通过连接其他合法符号可以创建新的操作符。例如，定义一个 `operator**` 以提供求幂运算是合法的
 
----
-## 4 重载操作符的设计
+### 1.4 重载操作符的设计
 
-### 输出操作符 `<<` 的重载
+#### 输出操作符 `<<` 的重载
 
 为了与 IO 标准库一致，操作符应接受 ostream& 作为第一个形参，对类类型 const 对象的引用作为第二个形参，并返回对ostream 形参的引用。另外，当定义符合标准库 iostream 规范的输入或输出操作符的时候，必须使它成为非成员操作符。
 
@@ -62,7 +60,7 @@ stream& operator << (ostream& out, const Sales_item& s){
 >运算符的重载一般我们会使用以下两种形式：1 成员函数；2 非成员函数，这两种定义不仅在语法上，在语义上也是有差别的。
 >语法上，定义为成员函数，比如 operator+=，只接受一个参数，而非成员函数接受2个参数
 
-### 输入操作符 >> 的重载
+#### 输入操作符 >> 的重载
 
 与输出操作符类似，输入操作符的第一个形参是一个引用，指向它要读的流，并且返回的也是对同一个流的引用。它的第二个形参是对要读入的对象的非const 引用，该形参必须为非const，因为输入操作符的目的是将数据读到这个对象中。**输入和输出操作符有如下区别：输入操作符必须处理错误和文件结束的可能性**
 
@@ -79,7 +77,7 @@ istream& operator>>(istream& in, Sales_item& s){
 }
 ```
 
-### 区别操作符的前缀和后缀形式
+#### 区别操作符的前缀和后缀形式
 
 同时定义前缀式操作符和后缀式操作符存在一个问题：它们的形参数目和类型相同，普通重载不能区别所定义的前缀式操作符还是后缀式操作符。
 
@@ -95,8 +93,7 @@ class CheckedPtr {
 };
 ```
 
----
-## 5 函数对象
+### 1.5 函数对象
 
 可以为类类型的对象重载函数调用操作符。一般为表示操作的类重载调用操作符。例如，可以定义名为 absInt 的结构，该结构封装将 int 类型的值转换为绝对值的操作:
 
@@ -113,27 +110,27 @@ absInt absObj;  // object that defines function call operator
 unsigned int ui = absObj(i);  
 ```
 
-### 标准库定义的函数对象
+#### 标准库定义的函数对象
 
 标准库定义了一组算术、关系与逻辑函数对象类，标准库还定义了一组函数适配器，使我们能够特化或者扩展标准库所定义的以及自定义的函数对象类。这些标准库函数对象类型是在 `functional`头文件定义的
 
 类型    | 函数对象    | 所应用的操作符
 --- | ---|---
-算术函数对象类型|    plus<Type>     | + 
-算术函数对象类型 | minus<Type>     | -
-算术函数对象类型 | multiplies<Type> | *
-算术函数对象类型 | divides<Type>     | /
-算术函数对象类型 | modulus<Type> | %
-算术函数对象类型 | negate<Type>     | -
-关系函数对象类型     | equal_to<Type>     | ==
-关系函数对象类型| not_equal_to<Type>     | !=
-关系函数对象类型| greater<Type>     | >
-关系函数对象类型| greater_equal<Type>     | >=
-关系函数对象类型| less<Type>     | <
-关系函数对象类型| less_equal<Type> | <=
-逻辑函数对象类型 | logical_and<Type>     | &&
-逻辑函数对象类型 | logical_or<Type>     | |
-逻辑函数对象类型| logical_not<Type>     | !
+算术函数对象类型| `plus<Type>` | `+`
+算术函数对象类型 | `minus<Type>` | `-`
+算术函数对象类型 | `multiplies<Type>` | `*`
+算术函数对象类型 | `divides<Type>` | `/`
+算术函数对象类型 | `modulus<Type>` | `%`
+算术函数对象类型 | `negate<Type>` | `-`
+关系函数对象类型 | `equal_to<Type>` | `==`
+关系函数对象类型| `not_equal_to<Type>` | `!=`
+关系函数对象类型| `greater<Type>` | `>`
+关系函数对象类型| `greater_equal<Type>` | `>=`
+关系函数对象类型| `less<Type>` | `<`
+关系函数对象类型| `less_equal<Type>` | `<=`
+逻辑函数对象类型 | `logical_and<Type>` | `&&`
+逻辑函数对象类型 | `logical_or<Type>` | `|`
+逻辑函数对象类型| `logical_not<Type>` | `!`
 
 ```cpp
 plus<int> intAdd;    // function object that can add two int values
@@ -148,7 +145,7 @@ int sum = intAdd(10, 20);    // sum = 30
 sum = intAdd(10, intNegate(10));    // sum = 0
 ```
 
-### 在算法中使用标准库函数
+#### 在算法中使用标准库函数
 
 函数对象常用于覆盖算法使用的默认操作符。例如，sort 默认使用 `operator<` 按升序对容器进行排序。为了按降序对容器进行排序，可以传递函数对象 greater。该类将产生一个调用操作符，调用基础对象的大于操作符。如果 `svec` 是一个 vector 对象，参考下面代码：
 
@@ -160,7 +157,7 @@ strings
 sort(svec.begin(), svec.end(), greater<string>());
 ```
 
-### 函数对象的函数适配器
+#### 函数对象的函数适配器
 
 标准库提供了一组函数适配器，用于特化和扩展一元和二元函数对象。函数适配器分为如下两类:
 
@@ -182,3 +179,7 @@ count_if(vec.begin(), vec.end(),bind2nd(less_equal<int>(),10));
 //再用 not1 对操作的返回值求反，效果是测试每个元素是否 <=。然后，对结果真值求反。这个 count_if 调用的效果是对不 <= 10 的那些元素进行计数。
 count_if(vec.begin(), vec.end(), not1(bind2nd(less_equal<int>(), 10)));
 ```
+
+## 2 类型转换
+
+- [ ] todo
