--- a/C&CPP/02-CPP-Basic/12-面向对象.md
+++ b/C&CPP/02-CPP-Basic/12-面向对象.md
@@ -1,22 +1,25 @@
-# 面向对象
+# 面向对象（Object-oriented programming，OOP）
+
+面向对象编程基于三个基本概念：数据抽象、继承和动态绑定。
+
+- **数据抽象**：定义类其实就是对数据的抽象。
+- **继承**：继承集成允许从一个类派生出另一个类，派生类继承基类暴露的成员。
+- **动态绑定**：有了动态绑定，编译器能够在运行时决定是使用基类中定义的函数还是派生类中定义的函数。
 
 ---
 ## 1 继承
 
-面向对象程序设计中最重要的一个概念是继承。继承允许我们依据另一个类来定义一个类，这使得创建和维护一个应用程序变得更容易。这样做，也达到了重用代码功能和提高执行时间的效果。
+继承集成允许从一个类派生出另一个类，派生类继承基类暴露的成员：
 
 - 被继承者称为基类
 - 继承者成为派生类
 
-继承代表了 **is a** 关系
-
-继承的语法如下
+继承代表了 **is a** 关系，继承的语法如下：
 
 ```cpp
+// 访问修饰符 access-specifier 是 public、protected 或 private 其中的一个 base-class 是之前定义过的某个类的名称。
+// 如果未使用访问修饰符 access-specifier，则默认为 private。
 class derived-class: access-specifier base-class
-
-访问修饰符 access-specifier 是 public、protected 或 private 其中的一个
-base-class 是之前定义过的某个类的名称。如果未使用访问修饰符 access-specifier，则默认为 private。
 ```
 
 ---
@@ -101,7 +104,6 @@ Item_base *baseP = &derived;
 double d = baseP->Item_base::net_price(42);
 ```
 
-
 ---
 ## 8 继承与静态成员
 
@@ -161,8 +163,10 @@ public:
 class Base { /* ... */ };
 
 class Derived: public Base {
+
 public:
-    Derived(const Derived& d):Base(d) 
+    Derived(const Derived& d):Base(d)
+
 }
 ```
 
@@ -213,15 +217,17 @@ Derived &Derived::operator=(const Derived &rhs){
 struct Base {
     int memfcn();
 };
+
 struct Derived : Base {
-    int memfcn(int); //隐藏Base的memfcn
+    //隐藏Base的memfcn
+    int memfcn(int);
 };
 
-Derived d; Base b;    
-b.memfcn();            // 调用Base的memfcn
-d.memfcn(10);            // 调用Drived的memfcn
-d.memfcn();            // 错误
-d.Base::memfcn(); //  调用Base的memfcn
+Derived d; Base b;
+b.memfcn();// 调用Base的memfcn
+d.memfcn(10);// 调用Drived的memfcn
+d.memfcn();// 错误
+d.Base::memfcn();//  调用Base的memfcn
 ```
 
 >局部作用域中声明的函数不会重载全局作用域中定义的函数，同样，派生类中定义的函数也不重载基类中定义的成员。
