--- a/C&CPP/02-CPP-Basic/10-类.md
+++ b/C&CPP/02-CPP-Basic/10-类.md
@@ -748,23 +748,24 @@ private:
 };
 ```
 
-### 9 复制控制
+## 9 复制控制
 
-除了定义类的对象如何被初始化，类型还能通过下面技术来控制复制、赋值或撤销该类型的对象时会发生的行为：
+除了定义类的对象如何被初始化，类型还能通过下面技术来控制复制、赋值、移动或撤销该类型的对象时会发生的行为：
 
-- 复制构造函数：一种特殊构造函数，具有单个形参，该形参（常用 const 修饰）是对该类类型的引用。当定义一个新对象并用一个同类型的对象对它进行初始化时，将显式使用复制构造函数。当将该类型的对象传递给函数或函数返回该类型的对象时，将隐式使用复制构造函数。
-- 析构函数：当对象超出作用域或动态分配的对象被删除时，将自动应用析构函数。析构函数可用于释放对象时构造或在对象的生命期中所获取的资源。不管类是否定义了自己的析构函数，编译器都自动执行类中非 static 数据成员的析构函数。
-- 赋值操作符：赋值操作符可以通过指定不同类型的右操作数而重载。
+- **复制构造函数(copy contructor)**：一种特殊构造函数，具有单个形参，该形参（常用 const 修饰）是对该类类型的引用。当定义一个新对象并用一个同类型的对象对它进行初始化时，将显式使用复制构造函数。当将该类型的对象传递给函数或函数返回该类型的对象时，将隐式使用复制构造函数。
+- **拷贝赋值操作符(copy-assignment operator)**：拷贝赋值操作符可以通过指定不同类型的右操作数而重载。
+- **析构函数(destructor)**：当对象超出作用域或动态分配的对象被删除时，将自动应用析构函数。析构函数可用于释放对象时构造或在对象的生命期中所获取的资源。不管类是否定义了自己的析构函数，编译器都自动执行类中非 static 数据成员的析构函数。
+- C++11 引入的 **移动构造函数(move contructor)** 和 **移动赋值操作符(move-assignment operator)**。
 
-复制构造函数、赋值操作符和析构函数总称为**复制控制**。编译器自动实现这些操作，但类也可以定义自己的版本。
+以上复制构造函数、移动构造函数、赋值操作符和析构函数总称为**复制控制**。编译器默认自动实现这些操作，但类也可以定义自己的版本。
 
 ### 9.1 复制构造函数
 
 对象发生拷贝的场景：
 
-- 使用了赋值运算符。
+- 定义对象时，使用了赋值运算符。
 - 调用函数时使用值传参。
-- 返回以值的形式返回对象。
+- 函数以值的形式返回对象。
 
 参考下面代码，对象的两种初始化形式：
 
@@ -798,7 +799,7 @@ A y = x;　　//拷贝初始化，调用拷贝构造函数
 - 复制一个对象，将它作为实参传给一个函数。
 - 从函数返回时复制一个对象。
 - 初始化顺序容器中的元素。
-- 根据元素初始化式列表初始化数组元素。
+- 根据元素初始化式(`{}`形式)列表初始化数组元素。
 
 参考下面代码：
 
@@ -856,11 +857,18 @@ classname (const classname &obj) {
 
 #### 禁止复制
 
-有些类需要完全禁止复制。例如 `iostream` 类就不允许复制。如果想要禁止复制，类必须显式声明其复制构造函数为 private。如果想要连友元和成员中的复制也禁止，就可以声明一个 private 的复制构造函数但不对其定义。
+有些类需要完全禁止复制。例如 `iostream` 类就不允许复制。如果想要禁止复制，有以下方式：
 
-### 9.2 赋值操作符
+- 显式将类的复制构造函数声明为 private。如果想要连友元和成员中的复制也禁止，就可以声明一个 private 的复制构造函数但不对其定义。
+- 定义删除函数（C++ 11）。
 
-赋值操作符用于定义对类型进行复制时将会发生的动作，与复制构造函数一样，如果类没有定义自己的赋值操作符，则编译器会合成一个。当然我们也可以自定义赋值操作符，参考下面代码:
+#### 编译器优化
+
+- [ ] todo
+
+### 9.2 拷贝赋值操作符
+
+拷贝赋值操作符用于定义对类型进行复制时将会发生的动作，与复制构造函数一样，如果类没有定义自己的赋值操作符，则编译器会合成一个。当然我们也可以自定义赋值操作符，参考下面代码:
 
 ```cpp
 class Book {
@@ -890,7 +898,6 @@ public:
 };
 
 int main() {
-
   string serialNo("a");
 
   //将调用构造函数
@@ -925,15 +932,20 @@ int main() {
 
 **如果类需要析构函数，则它也需要赋值操作符和复制构造函数，这是一个有用的经验法则。这个规则常称为三法则，指的是如果需要析构函数，则需要所有这三个复制控制成员**。
 
----
-## 10 管理指针成员
+### 9.3 管理指针成员
 
 设计具有指针成员的类时，类设计者必须首先需要决定的是该指针应提供什么行为。将一个指针复制到另一个指针时，两个指针指向同一对象。当两个指针指向同一对象时，可能使用任一指针改变基础对象。类似地，很可能一个指针删除了一对象时，另一指针的用户还认为基础对象仍然存在。
 
 大多数 C++ 类采用以下三种方法之一管理指针成员：
 
-- 指针成员采取常规指针型行为。这样的类具有指针的所有缺陷但无需特殊的复制控制，可能会出现悬停指针。
-- 类可以实现所谓的“智能指针”行为，指针所指向的对象是共享的，但类能够防止悬垂指针。
-- 类采取值型行为。指针所指向的对象是唯一的，由每个类对象独立管理。
+- **共享指针对象**：指针成员采取常规指针型行为。这样的类具有指针的所有缺陷但无需特殊的复制控制，可能会出现悬停指针。
+- **智能指针**：类可以实现所谓的“智能指针”行为，指针所指向的对象是共享的，但类能够防止悬垂指针。
+- **值复制**：类采取值型行为。指针所指向的对象是唯一的，由每个类对象独立管理。
 
 定义智能指针的通用技术是采用一个使用计数。智能指针类将一个计数器与类指向的对象相关联。使用计数跟踪该类有多少个对象共享同一指针。使用计数为 0 时，删除对象。使用计数有时也称为引用计数。
+
+- [] todo
+
+### 9.4 对象移动
+
+- [] todo
