--- a/C&CPP/02-CPP-Basic/10-类.md
+++ b/C&CPP/02-CPP-Basic/10-类.md
@@ -864,7 +864,10 @@ classname (const classname &obj) {
 
 #### 编译器优化
 
-- [ ] todo
+编译器可以选择性的做返回值拷贝优化，有两种优化类型：
+
+- RVO（Return Value Optimization）:消除函数返回时创建的临时对象。
+- NRVO（Named Return Value Optimization）：属于 RVO 的一种技术, 直接将要初始化的对象替代掉返回的局部对象进行操作。
 
 ### 9.2 拷贝赋值操作符
 
