--- a/C&CPP/02-CPP-Basic/12-面向对象.md
+++ b/C&CPP/02-CPP-Basic/12-面向对象.md
@@ -24,7 +24,7 @@
 class derived-class: access-specifier base-class
 ```
 
-### 派生类
+### 1.2 派生类
 
 - **内存分布**：内存上，C++ 语言不要求编译器将对象的基类部分和派生部分和派生部分连续排列
 - **派生类的声明**：如果需要声明（但并不实现）一个派生类，则声明包含类名但不包含派生列表。
@@ -38,7 +38,7 @@ class SubClass;
 class ParentClass;
 ```
 
-### 继承与访问控制权
+### 1.3 继承与访问控制权
 
 派生类可以访问基类中所有的非私有成员。因此基类成员如果不想被派生类的成员函数访问，则应在基类中声明为 `private`。
 
@@ -48,7 +48,7 @@ class ParentClass;
 - 基类的重载运算符。
 - 基类的友元函数。
 
-### 继承类型
+### 1.4 继承类型
 
 当一个类派生自基类，该基类可以被继承为 `public`、`protected` 或 `private` 几种类型。继承类型是通过访问修饰符来指定的。
 
@@ -65,11 +65,11 @@ class ParentClass;
 
 使用实现继承时，派生类可以恢复继承成员的访问级别，但不能使访问级别比基类中原来指定的更严格或更宽松，可以在派生类的 public 部分增加一个 using 声明 `uing BaseClass::filed_name;`。
 
-### 友元关系与继承
+### 1.5 友元关系与继承
 
 友元关系不能继承。基类的友元对派生类的成员没有特殊访问权限。如果基类被授予友元关系，则只有基类具有特殊访问权限，该基类的派生类不能访问授予友元关系的类。
 
-### 继承与静态成员
+### 1.6 继承与静态成员
 
 如果基类定义 static 成员，则整个继承层次中只有一个这样的成员。无论从基类派生出多少个派生类，每个 static 成员只有一个实例。static 成员遵循常规访问控制：如果成员在基类中为 private，则派生类不能访问它。假定可以访问成员，则既可以通过基类访问 static 成员，也可以通过派生类访问 static 成员。一般而言，既可以使用作用域操作符也可以使用点或箭头成员访问操作符。
 
@@ -78,7 +78,7 @@ class ParentClass;
 
 虚函数是在基类中使用关键字 virtual 声明的函数。为了指明函数为虚函数，在其返回类型前面加上保留字 virtual。除了构造函数之外，任意非 static 成员函数都可以是虚函数。一旦函数在基类中声明为虚函数，它就一直为虚函数，派生类无法改变该函数为虚函数这一事实。派生类重定义虚函数时，可以使用 virtual 保留字，也可以不指定。
 
-### 动态绑定
+### 2.1 动态绑定
 
 关键字 virtual 的目的是启用动态绑定。成员默认为非虚函数，对非虚函数的调用在编译时确定，而对虚函数的调用则是运行时确认的。
 
@@ -89,11 +89,11 @@ class ParentClass;
 1. 只有指定为虚函数的成员函数才能进行动态绑定，成员函数默认为非虚函数，非虚函数不进行动态绑定;
 2. 必须通过基类类型的引用或指针进行函数调用。
 
-### 静态链接
+### 2.2 静态链接
 
 如果基类中的函数不是虚函数，那么即使派生类重写了该函数，当以 **基类形态** 去调用实际类型为派生类的函数时，调用的是基类中的函数。即函数调用在程序执行前就准备好了。有时候这也被称为早绑定。
 
-### 纯虚函数
+### 2.3 纯虚函数
 
 在基类中不对虚函数给出有意义的实现，这个时候就是纯虚函数。
 
@@ -108,11 +108,11 @@ class ParentClass;
 - 析构函数应当是虚函数，将调用相应对象类型的析构函数，因此，**如果指针指向的是子类对象，将调用子类的析构函数，然后自动调用基类的析构函数**。
 - 如果基类的虚函数不是纯虚函数，则派生类可以在实现中调用基类的虚函数。
 
-### 多态性
+### 2.4 多态性
 
 当类之间存在层次结构，并且类之间是通过继承关联时，就会用到多态。C++ 多态意味着调用成员函数时，会根据调用函数的对象的类型来执行不同的函数。
 
-### 覆盖虚函数机制
+### 2.5 覆盖虚函数机制
 
 在某些情况下，希望覆盖虚函数机制并强制函数调用使用虚函数的特定版本，这里可以使用作用域操作符
 
@@ -122,19 +122,20 @@ Parent *baseP = &child;
 double d = baseP->Parent::method(42);
 ```
 
-### 虚函数与默认实参
+### 2.6 虚函数与默认实参
 
 - 通过基类的引用或指针调用虚函数时，默认实参为在基类虚函数声明中指定的值，如果通过派生类的指针或引用调用虚函数，则默认实参是在派生类的版本中声明的值。
 - 在同一虚函数的基类版本和派生类版本中使用不同的默认实参几乎一定会引起麻烦。
 
+---
 ## 3 转换与继承
 
-### 1 派生类到基类的转换
+### 3.1 派生类到基类的转换
 
 - 一个是派生类对象转换为基类类型引用，引用直接绑定到该对象，没有复制行为。
 - 一个是用派生类对象对基类对象进行初始化或赋值，则该派生类对象的基类部分被复制到形参，此时基类对象中没有派生类成员的存储空间。即**对象切片**。
 
-### 2 派生类到基类转换的可访问性
+### 3.2 派生类到基类转换的可访问性
 
 要确定到基类的转换是否可访问，可以考虑基类的 public 成员是否访问，如果可以，转换是可访问的，否则，转换是不可访问的。
 
@@ -143,7 +144,7 @@ double d = baseP->Parent::method(42);
 - 如果是 private 继承，则从 private 继承类派生的类不能转换为基类。
 - 如果是 protected 继承，则后续派生类的成员可以转换为基类类型。
 
-### 3 基类到派生类的转换
+### 3.3 基类到派生类的转换
 
 - 从基类到派生类的自动转换是不存在的。需要派生类对象时不能使用基类对象。
 - 如果知道从基类到派生类的转换是安全的，就可以使用 static_cast 强制编译器进行转换。或者，可以用 dynamic_cast 申请在运行时进行检查。
@@ -216,7 +217,7 @@ public:
 }
 ```
 
-### 派生类赋值操作符
+### 4.3 派生类赋值操作符
 
 赋值操作符通常与复制构造函数类似：如果派生类定义了自己的赋值操作符，则该操作符必须对基类部分进行显式赋值。
 
@@ -232,11 +233,11 @@ Derived &Derived::operator=(const Derived &rhs){
 }
 ```
 
-### 派生类析构函数
+### 4.4 派生类析构函数
 
 析构函数的工作与复制构造函数和赋值操作符不同：派生类析构函数不负责撤销基类对象的成员。编译器总是自动调用派生类对象基类部分的析构函数。每个析构函数只负责清除自己的成员，**对象的撤销顺序与构造顺序相反**：首先运行派生析构函数，然后按继承层次依次向上调用各基类析构函数。
 
-### 虚析构函数
+### 4.4 虚析构函数
 
 - [ ] todo
 
