--- a/C&CPP/02-CPP-Basic/10-类.md
+++ b/C&CPP/02-CPP-Basic/10-类.md
@@ -207,7 +207,7 @@ Box& Box::combine(const Box &rhs){
 ---
 ## 3 类的成员访问修饰符
 
-- `public`公有成员在程序中类的外部是可访问的。可以不使用任何成员函数来设置和获取公有变量的值
+- `public`公有成员在程序中类的外部是可访问的。可以不使用任何成员函数来设置和获取公有变量的值。
 - `private`私有成员变量或函数在类的外部是不可访问的，甚至是不可查看的。只有类和友元函数可以访问私有成员。
 - `protected`保护成员变量或函数与私有成员十分相似，但有一点不同，保护成员在派生类（即子类）中是可访问的。
 
@@ -218,8 +218,8 @@ Box& Box::combine(const Box &rhs){
 
 **普通名字查找过程**：
 
-1. 首先，在使用该名字的块中查找名字的声明。只考虑在该项使用之前声明的名字。
-2. 如果找不到该名字，则在包围的作用域中查找
+1. 首先，在使用该名字的块中查找名字的声明，只考虑在该项使用之前声明的名字。
+2. 如果找不到该名字，则在包围的作用域中查找。
 3. 如果找不到任何声明，则程序出错。在 C++ 程序中，所有名字必须在使用之前声明。
 
 对于名字查找，类定义实际上是在两个阶段中处理：
@@ -440,7 +440,7 @@ public:
 - 没有类内初始值。
 - 没有基类，也没有 virtual 函数。
 
-对于聚合类，可以采用与初始化数组元素相同的方式初始化其成员
+对于聚合类，可以采用与初始化数组元素相同的方式初始化其成员：
 
 ```cpp
 struct Data {
