--- a/C&CPP/02-CPP-Basic/12-面向对象.md
+++ b/C&CPP/02-CPP-Basic/12-面向对象.md
@@ -13,8 +13,8 @@
 
 继承允许从一个类派生出另一个类，派生类继承基类暴露的成员：
 
-- 被继承者称为基类
-- 继承者成为派生类
+- 被继承者称为基类（base class）
+- 继承者成为派生类（derived class）
 
 继承代表了 **is a** 关系，继承的语法如下：
 
@@ -26,16 +26,16 @@ class derived-class: access-specifier base-class
 
 ### 1.2 派生类
 
-- **内存分布**：内存上，C++ 语言不要求编译器将对象的基类部分和派生部分和派生部分连续排列
+- **内存分布**：内存上，C++ 语言不要求编译器将对象的基类部分和派生部分和派生部分连续排列。
 - **派生类的声明**：如果需要声明（但并不实现）一个派生类，则声明包含类名但不包含派生列表。
 
 ```cpp
 //错误，向前声明不能声明派生列表
-class SubClass : public ParentClass;
+class DerivedClass : public BaseClass;
 
 //正确的向前生命
-class SubClass;
-class ParentClass;
+class DerivedClass;
+class BaseClass;
 ```
 
 ### 1.3 继承与访问控制权
@@ -117,9 +117,10 @@ class ParentClass;
 在某些情况下，希望覆盖虚函数机制并强制函数调用使用虚函数的特定版本，这里可以使用作用域操作符
 
 ```cpp
-Parent *baseP = &child;
+DerivedClass derived;
+BaseClass *baseP = &derived;
 // 这里从基类 Parent 调用版本，而不考虑动态类型的 baseP。
-double d = baseP->Parent::method(42);
+double d = baseP->BaseClass::method(42);
 ```
 
 ### 2.6 虚函数与默认实参
@@ -147,7 +148,7 @@ double d = baseP->Parent::method(42);
 ### 3.3 基类到派生类的转换
 
 - 从基类到派生类的自动转换是不存在的。需要派生类对象时不能使用基类对象。
-- 如果知道从基类到派生类的转换是安全的，就可以使用 static_cast 强制编译器进行转换。或者，可以用 dynamic_cast 申请在运行时进行检查。
+- 如果知道从基类到派生类的转换是安全的，就可以使用 `static_cast` 强制编译器进行转换。或者，可以用 `dynamic_cast` 申请在运行时进行检查。
 
 ---
 ## 4 构造函数和复制控制
@@ -185,7 +186,7 @@ public:
 使用定义的构造函数可以向基类构造函数传递实参来初始化基类成员。
 
 ```cpp
-Child(...paramster):Parent(paramster1, paramster2),filed1(paramster3), filed2(paramster4) {
+DerivedClass(...paramster):BaseClass(paramster1, paramster2),filed1(paramster3), filed2(paramster4) {
 
 }
 ```
