--- a/C&CPP/01-C-Basic/00-C学习资料.md
+++ b/C&CPP/01-C-Basic/00-C学习资料.md
@@ -32,3 +32,4 @@
 高质量博客
 
 - [C++静态库与动态库](https://www.cnblogs.com/skynet/p/3372855.html)
+- [C语言再学习](https://blog.csdn.net/qq_29350001/category_9267707.html?utm_source=zl2019)
