--- a/C&CPP/01-C-Basic/11-指针细节.md
+++ b/C&CPP/01-C-Basic/11-指针细节.md
@@ -1,6 +1,6 @@
 # 指针细节
 
->内容来自[《Linux C编程一站式学习》](https://akaedu.github.io/book/) 第二部分 C语言本质 第23章。这里只是对原内容进行更细致的划分，以加强理解和记忆。
+>内容摘自[《Linux C编程一站式学习》](https://akaedu.github.io/book/) 第二部分 C语言本质 第 23 章。这里只是对原内容进行更细致的划分，以加强理解和记忆。
 
 ---
 ## 1 指针的基本概念
@@ -576,7 +576,7 @@ void (*signal(int signum, void (*handler)(int)))(int);
 void (*)(int) signal( int signum, void(*handler)(int));
 //signal 是一个函数，该函数的参数为一个 int 变量和一个 函数指针 handler
 //phandler 接受一个 int 变量，没有返回值。
-//signal 返回一个 函数指针，该指针指向一个函数，假设为 p2
+//signal 返回一个函数指针，该指针指向一个函数，假设为 p2
 //p2 接受一个 int 变量，没有返回值。
 ```
 
@@ -607,4 +607,4 @@ T1 *fp;
 //显然，T3是一个 int 数组，由 10 个元素组成。分解完毕。
 ```
 
-实际原形为：`int (*)[10] (*fp)(void *)`，fp 是一个指针，指向一个函数，该函数的参数为  void*，返回为一个数组的指针，该指针指向的数组类型为 `int [10]`。
+实际原形为：`int (*)[10] (*fp)(void *)`，fp 是一个指针，指向一个函数，该函数的参数为 void*，返回为一个数组的指针，该指针指向的数组类型为 `int [10]`。
