--- a/C&CPP/02-CPP-Basic/00-C++学习资料.md
+++ b/C&CPP/02-CPP-Basic/00-C++学习资料.md
@@ -25,6 +25,7 @@
 
 - [C++笔记](http://www.hahack.com/wiki/)
 - [cpp-primer 笔记](https://r00tk1ts.github.io/tags/cpp-primer/)
+- [C/C++基础知识点](https://blog.csdn.net/K346K346/category_9265704_2.html)
 
 视频教程
 
