--- a/C&CPP/02-CPP-Basic/03-变量和数据类型.md
+++ b/C&CPP/02-CPP-Basic/03-变量和数据类型.md
@@ -179,6 +179,23 @@ const int *pci = new const int(1024);
 delete pci;
 ```
 
+#### 顶层 const 与底层 const
+
+顶层 const 和底层 const 的通俗定义：
+
+- 顶层 const: 顶层 const 作用于对象本身，表示对象自身是一个常量。即对象本身不能被修改，比如不能修改底层 const 指针指向其他对象，但是可以修改指针所指向的对象的值。
+- 底层 const: 表示指针所指向的对象是个常量，底层 const 表示为不能修改所指向的对象的值，即所指向的对象是一个常量，但是可以修改指针的指向。
+
+```cpp
+//底层指针
+const int *pVal1 = &iVal;
+
+//顶层指针
+int * const pVal3 = &iVal;
+```
+
+具体参考[搞懂顶层const和底层const](https://segmentfault.com/a/1190000005168641)
+
 ### 2.4  constexpr 常量表达式（C++11）
 
 常量表达式是指值不会改变且在编译阶段就能计算结果的表达式。
