--- a/C&CPP/02-CPP-Basic/12-面向对象.md
+++ b/C&CPP/02-CPP-Basic/12-面向对象.md
@@ -112,6 +112,9 @@ class BaseClass;
 
 当类之间存在层次结构，并且类之间是通过继承关联时，就会用到多态。C++ 多态意味着调用成员函数时，会根据调用函数的对象的类型来执行不同的函数。
 
+- 静态多态（静态联编）是指在编译期间就可以确定函数的调用地址，通过 **函数重载** 和 **模版（泛型编程）** 实现。
+- 动态多态（动态联编）是指函数调用的地址不能在编译器期间确定，必须需要在运行时才确定，通过 **继承+虚函数** 实现。
+
 ### 2.5 覆盖虚函数机制
 
 在某些情况下，希望覆盖虚函数机制并强制函数调用使用虚函数的特定版本，这里可以使用作用域操作符
