--- a/Python/02-基础语法.md
+++ b/Python/02-基础语法.md
@@ -5,7 +5,7 @@
 
 Python有以下数据类型：
 
-```
+```python
     Numbers 数字：
                 int 有符号整型
                 long 长整型(也可代表八进制和十六进制)
@@ -41,7 +41,6 @@ a = 3
 print(type(a))
 ```
 
-
 ### 布尔类型
 
 数据都可以转换为布尔类型，比如：
@@ -74,13 +73,13 @@ print(id(a))
 - 在 Python 里，标识符有字母、数字、下划线组成。
 - 在 Python 中，所有标识符可以包括英文、数字以及下划线`(_)`，但不能以数字开头。
 - Python 中的标识符是区分大小写的。
-- 以下划线开头的标识符是有特殊意义的。以单下划线开头 `_foo` 的代表不能直接访问的类属性，需通过类提供的接口进行访问，不能用 `from xxx import * `而导入；
-- 以双下划线开头的 `__foo `代表类的私有成员；以双下划线开头和结尾的` __foo__` 代表 Python 里特殊方法专用的标识，如` __init__() `代表类的构造函数。
+- 以下划线开头的标识符是有特殊意义的。以单下划线开头 `_foo` 的代表不能直接访问的类属性，需通过类提供的接口进行访问，不能用 `from xxx import *`而导入。
+- 以双下划线开头的 `__foo`代表类的私有成员；以双下划线开头和结尾的`__foo__` 代表 Python 里特殊方法专用的标识，如`__init__()`代表类的构造函数。
 
 ---
 ## 3 Python中的关键字
 
-```
+```python
         False               def                 if                  raise
         None                del                 import              return
         True                elif                in                  try
@@ -105,7 +104,6 @@ print(keyword.kwlist)
 - 以`#`开头，`#`右边的所有字符都当做说明，而不是真正要执行的程序
 - 多行注释使用一对`'''`或者`"""`包裹起来
 
-
 ---
 ## 5 代码换行
 
@@ -120,7 +118,6 @@ b = 3 + 4 +\
 ```
 
 一行写多个语句，使用`;`分割。
-
 
 ---
 ## 6 类型转换
