--- a/C&CPP/05-现代C++实战/02-实现C++的智能指针.md
+++ b/C&CPP/05-现代C++实战/02-实现C++的智能指针.md
@@ -238,7 +238,7 @@ Shape2 ~Shape()
 
 上面给出的语义本质上就是 C++98 的 `auto_ptr` 的定义，因为 C++ 委员会这个实现很别扭，`auto_ptr` 在 C++17 时已经被正式从 C++ 标准里删除了。上面实现的最大问题是，它的行为会让程序员非常容易犯错。一不小心把它传递给另外一个 `smart_ptr`，你就不再拥有这个对象了。
 
-### “移动”指针
+### 2.4 “移动”指针
 
 如何使用“移动”来改善 smart_ptr 行为：
 
@@ -335,7 +335,7 @@ Shape4 ~Shape()
 
 >另外：调用移动不一定靠 move。如果函数返回一个 unique_ptr 一样是自然的移动。
 
-### 子类指针向基类指针的转换
+### 2.5 子类指针向基类指针的转换
 
 上面实现还有一个问题，一个 `circle*` 是可以隐式转换成 `shape*` 的，但上面的 `smart_ptr<circle>` 却无法自动转换成 `smart_ptr<shape>`。这个行为显然还是不够“自然”。只需要额外加一点模板代码，就能实现这一行为。在我们目前给出的实现里，只需要增加一个构造函数即可——这也算是我们让赋值函数利用构造函数的好处了。
 
@@ -815,3 +815,7 @@ smart_ptr<T> dynamic_pointer_cast(const smart_ptr<U> &other) noexcept {
 ## 8 推荐阅读
 
 - 《Professional C＋＋ 4th edition》第九章。
+
+## 9 原文
+
+- [02 | 自己动手，实现C++的智能指针](https://time.geekbang.org/column/article/169263)
