--- a/C&CPP/02-CPP-Basic/03-变量和数据类型.md
+++ b/C&CPP/02-CPP-Basic/03-变量和数据类型.md
@@ -181,9 +181,9 @@ delete pci;
 
 #### 顶层 const 与底层 const
 
-顶层 const 和底层 const 的通俗定义：
+指针本身是一个对象，而它又可以指向另一个对象，那么指针是不是常量以及指针所指向的对象是不是常量就是两个独立的问题，所以就有了顶层 const 和底层 const 概念，定义：
 
-- 顶层 const: 顶层 const 作用于对象本身，表示对象自身是一个常量。即对象本身不能被修改，比如不能修改底层 const 指针指向其他对象，但是可以修改指针所指向的对象的值。
+- 顶层 const: 顶层 const 作用于对象本身，表示对象自身是一个常量。即对象本身不能被修改，比如不能修改顶层 const 指针指向其他对象，但是可以修改指针所指向的对象的值。
 - 底层 const: 表示指针所指向的对象是个常量，底层 const 表示为不能修改所指向的对象的值，即所指向的对象是一个常量，但是可以修改指针的指向。
 
 ```cpp
