--- a/C&CPP/02-CPP-Basic/08-表达式、语句与类型转换.md
+++ b/C&CPP/02-CPP-Basic/08-表达式、语句与类型转换.md
@@ -1,4 +1,4 @@
-# 表达式
+# 08-表达式、语句与类型转换
 
 表达式由一个或多个运算对象组成，对表达式求值将会得到一个结果。
 
@@ -149,7 +149,7 @@ double *dp = static_cast<double*>(p);//使用 static_cast 将 void* 转换为原
 
 #### dynamic_cast
 
-dynamic_cast 与运行时类型识别有关，通过运行时类型识别（RTTI），程序能够使用基类的指针或引用来检索这些指针或引用所指对象的实际派生类型。
+dynamic_cast 与运行时类型识别有关，通过运行时类型识别（RTTI），程序能够使用基类的指针或引用来检索这些指针或引用所指对象的实际派生类型。具体参考[RTTI](advance-tech-RTTI.md)
 
 #### const_cast
 
