--- a/C&CPP/02-CPP-Basic/10-类.md
+++ b/C&CPP/02-CPP-Basic/10-类.md
@@ -949,6 +949,126 @@ int main() {
 
 - [] todo
 
-### 9.4 对象移动
+### 9.4 对象移动（C++ 11）
 
-- [] todo
+C++ 11 新增了对象移动的特性。
+
+>对象移动理解：对象移动可以理解为移交一些临时变量的所有权，在程序中一些变量的生存期非常短，比如部分表达式产生的值，后增运算符 i++，函数返回值等等，而我们可以在它们即将销毁之前把它们的所有权“移动”（转移）给其他变量，它们在内存中的位置是不变的，也就是没有创建新的对对象，只不过归属于其他变量了，生存期也就随着所属的变量而变化了。——[原文链接](https://blog.csdn.net/wwh578867817/article/details/42084887)。
+
+对象移动针对以下情况：
+
+1. 很多情况下都会发生对象拷贝，而有些对象拷贝后又会立马被销毁，而对象移动可以避免类似情况下资源的浪费。
+2. 两外对于 IO 或者是 unique_ptr 这样的类，都保护不能被共享的资源，因此对象不能被拷贝，但是可以被移动。
+3. 旧版本的容器要求保存的元素是可以拷贝的，而在新的标准下，可以用容器保存不可拷贝的元素，这要它们能被移动。
+
+#### 9.4.1 右值引用
+
+为了支持对象移动，C++ 引入了右值引用（rvalue reference）的概念。右值引用就是必须绑定到右值的引用。右值智能绑定到一个即将销毁的对象，因此可以自由地将一个右值引用的资源转移到另一个对象中。语法上通过 `&&` 来获取右值引用。
+
+- 左值：一个左值表达式表示的是对象的身份。
+- 右值：一个右值表达式表示的是对象的值。
+
+为了区分，将常规引用称为左值引用，而右值引用与左值引用一样，都是一个对象的名字，但它们具有相反的绑定特性：
+
+- 左值引用不能绑定到要求转换的表达式、字面常量、返回右值的表达式。
+- 右值可以绑定这类表达式上，但是不能将一个右值引用直接绑定到一个左值上。
+
+```cpp
+    int i = 42;
+    int &r = i;
+    //int &&rr = i; 错误
+    //int &r2 = i * 24; 错误，i * 24 是一个右值
+    const int &r3 = i * 24;//可以将右值绑定到一个常量引用上
+    int &&rr2 = i * 24;//可以将右值绑定到一个右值引用上
+```
+
+##### 左值持久，右值短暂
+
+右值要么是字母常量，要么是表达式求值参加的临时对象。由于右值引用智能绑定到临时对象，可知:
+
+- 所引用的对象将要销毁。
+- 该对象没有其他用户。
+
+这意味着**使用右值引用的代码可以自由地接管所引用对象的资源**。
+
+##### 变量是左值
+
+- 变量可以看作是只有一个运算对象而没有运算符的表达式。变量是持久的，直到离开作用域才会被销毁。
+- 因为变量是左值，不能将一个右值引用绑定到一个右值引用类型的变量上。
+- 变量表达式但是左值。
+
+```cpp
+int &&rr1 = 42;//正确，字面量是右值。
+int &&rr2 = rr1;//错误，表达式 rr1 是左值。
+```
+
+##### `std::move` 函数
+
+不能将一个右值引用绑定到一个左值上，但是可以显式地将一个左值转换为对于的右值引用类型。通过调用 `std::move` 函数来获得绑定到左值上的右值引用。
+
+```cpp
+int &&rr3 = std::move(rr1);//正确
+```
+
+move 函数定义在 `utility` 头文件中，其告诉编译器，有一个左值，但希望像右值一样使用它。需要注意，调用 move 就意味着承诺**除了对 rr1 进行赋值或者销毁它外，将不再使用它**，调用 move 后，不能对移后源对象的值作任何假设（可对对移后源对象进行赋值或销毁它，但不能使用它的值）。
+
+使用 move 函数不必使用 using 声明，直接使用 `std::move` 即可。
+
+#### 9.4.2 移动构造函数与移动赋值运算符
+
+定义移动拷贝构造函数和移动赋值操作符可以让对象支持移动。移动拷贝构造函数的第一个参数是才类类型的一个引用。除了完成资源移动，移动拷贝构造函数必须保证移后源对象处于一种状态——**销毁它是无害的，一旦资源完成移动，源对象必须不应该再指向被移动的资源，这些资源的所有权都归于了新对象**。
+
+```cpp
+class MoveClass {
+private:
+    std::string *name_;
+public:
+...
+
+    MoveClass(MoveClass &&other) noexcept : name_(other.name_) {
+        //源对象必须不应该再指向被移动的资源，这些资源的所有权都归于了新对象
+        other.name_ = nullptr;
+        if (name_) {
+            std::cout << *name_ << "  move MoveClass()" << std::endl;
+        } else {
+            std::cout << "move MoveClass()" << std::endl;
+        }
+    }
+
+...
+};
+```
+
+移动构造函数应该加上 noexcpet 标志。
+
+##### 移动操作与标准容器库和异常
+
+移动操作不设计内存分配，因此移动操作通常不应该抛出异常，一般应该给移动构造函数应该加上 noexcpet 标志。noexcpet 表示该函数不会抛出异常。
+
+加上 noexcpet 的移动构造函数和移动赋值运算符可以让标准库容器更高效地工作。
+
+- 对于没有定义移动构造函数的类类型对象 e，调用 `vector.push_back(e)` 时，将使用对象的移动构造函数。
+- 对于没有加上 noexcpet 的移动构造函数的类类型对象 e，调用 `vector.push_back(e)` 时，将使用对象的拷贝构造函数。
+- 对于加上 noexcpet 的移动构造函数的类类型对象 e，调用 `vector.push_back(e)` 时，将使用对象的移动构造函数。
+
+```cpp
+void sample4() {
+    //使用移动构造函数
+    vector<MoveClass> vector1;
+    vector1.push_back(MoveClass("mc1"));
+
+    //使用拷贝构造函数
+    vector<MoveClassWithExcept> vector2;
+    vector2.push_back(MoveClassWithExcept("mcwe1"));
+
+    //使用拷贝构造函数
+    vector<NoMoveClass> vector3;
+    vector3.push_back(NoMoveClass("nmc1"));
+}
+```
+
+具体参考 《C Primer 5E》 13.6.2
+
+##### 移动赋值操作符
+
+- [ ] todo
